# cloud-carbon-coefficients

./: .gitignore  NOTEBOOK_README.md  README.md  coefficients.ipynb  pyproject.toml  requirements.txt  settings.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
ccfcoef/: cli.py  coefficients.py  constants.py  cpu_info.py  cpu_load.py  cpu_power.py  embodied.py  emissions.py  family.py  instances.py  servers.py  specfetch.py  specpower.py
ccfcoef/aws/: coefficients.py  embodied.py  emissions.py
ccfcoef/azure/: coefficients.py  embodied.py  emissions.py  instances.py
data/: README.md  SPECpower-2022-03-01.csv  SPECpower-2023-04-06.csv  SPECpower-2023-04-27.csv  SPECpower-2023-04-28.csv  SPECpower-2023-05-01.csv  SPECpower-full-results.csv  amd-epyc-gen1.csv  amd-epyc-gen2.csv  amd-epyc-gen3.csv  aws-instance-cpus.csv  aws-instances.csv  azure-instances.csv  gcp-instances-cpus.csv  gcp-instances.csv  grid-emissions-factors-aws.csv  grid-emissions-factors-azure.csv  grid-emissions-factors-gcp.csv  intel-broadwell.csv  intel-cascadelake.csv  intel-coffeelake.csv  intel-haswell.csv  intel-ivybridge.csv  intel-sandybridge.csv  intel-skylake.csv
output/: coefficients-aws-embodied.csv  coefficients-aws-use.csv  coefficients-azure-embodied.csv  coefficients-azure-use.csv  coefficients-gcp-embodied-mean.csv  coefficients-gcp-embodied.csv  coefficients-gcp-use.csv
tests/: test_aws_platform_check.py  test_cpu_families.py  test_cpuload.py  test_embodied_coefficients.py  test_power_averages.py  test_servers.py  test_usage_coefficients.py
(+3 files in other folders)
